fixed the mistakes